--- a/prueba1.html
+++ b/prueba1.html
@@ -5,14 +5,23 @@
 		<meta name="description" content="Free Web tutorials">
 		<meta name="keywords" content="HTML, CSS, JavaScript">
 		<meta name="author" content="María Romero">
-		<style type="text/css">
+		<style>
 			body {background-color: powderblue;}
   			h1 {color: red;}
  			p {color: blue;}
 		</style>
 		<title>Hola mundo</title>
 	</head>
-	<body>
-		Hola mundo
+	<body onload="saludo()">
+		<h1 id="titulo" onclick="cambia_color()">Hola mundo</h1>
+		<p>Hola mi nombre es maría</p>
+		<script>
+	  		 function saludo(){
+	    	 alert("Bienvenido") 
+	    	}
+	    	 function cambia_color(){
+	    	 	document.getElementById("titulo").style.color="drakgreen"
+	    	 }
+		</script> 
 	</body>
 </html>
