--- a/prueba1.html
+++ b/prueba1.html
@@ -6,7 +6,7 @@
 		<meta name="keywords" content="HTML, CSS, JavaScript">
 		<meta name="author" content="María Romero">
 		<style>
-			body {background-color: powderblue;}
+			body {background-color: #DCC6DC;}
   			h1 {color: red;}
  			p {color: blue;}
 		</style>
@@ -20,7 +20,8 @@
 	    	 alert("Bienvenido") 
 	    	}
 	    	 function cambia_color(){
-	    	 	document.getElementById("titulo").style.color="drakgreen"
+	    	 	document.getElementById("titulo").style.
+	    	 	color="#BE33FF"
 	    	 }
 		</script> 
 	</body>
