--- a/ejercicio6.html
+++ b/ejercicio6.html
@@ -6,7 +6,7 @@
 	<title>Audio y Vídeo | María Romero Fontanilla</title>
 </head>
 <body>
-	<img src="https://media.es.wired.com/photos/63ffca4bf472de9298432cfd/1:1/w_1144,h_1144,c_limit/Final-Fantasy-XVI-Is-What-Happens-When-Developers-Grow-Up-Swap-Games-.jpg" height="250">
+	<img src="C:\Users\mromero\Documents\GitHub\mariaromerofontanilla.github.io\img\musica-Se-me-ocurre.jpg" width="500" style="float:right;" >
 	<fieldset style="width:35%">
 	<legend><h1>Audio y Vídeo</h1></legend>
 	<audio autoplay controls src="C:\Users\mromero\Documents\GitHub\mariaromerofontanilla.github.io\audio\musica-Tortuga-de-Mar-Se-me-ocurre.mp3">
@@ -28,7 +28,7 @@
 	Oh oh hacia cualquier lugar<br>
 	Oh oh coge tus cosas, ven<br>
 	No hagas preguntas<br>
-	Todo puede pasar<br>
+	Todo puede pasar<br><br>
 	
 	<b>Yeah yeah<br>
 	Yeah yeah yeah yeah<br>
