--- a/ejercicio6.html
+++ b/ejercicio6.html
@@ -71,7 +71,7 @@
 	Yeah yeah yeah yeah<br>
 	Yeah yeah yeah yeah<br><br></b>
 
-	Asume tu duda al caminar<br>
+	Asume tu duda al caminar<br><br>
 
 	<b>Yeah yeah yeah yeah<br>
 	Yeah yeah yeah yeah?</p></b>
