--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<h1>María Romero Fontanilla</h1>
 	<h2>1ºDAM IES Nervión Curso año 2023-2024</h2>
 	<p><a href="https://github.com/mariaromerofontanilla/mariaromerofontanilla.github.io.git">Enlace a GitHub</a>
-	<p><a href="ejercicio1.html" target="blank"></a>Ejercicio1</p>
-	<p><a href="ejercicio2.html" target="blank"></a>Ejercicio2</p>
-	<p><a href="ejercicios3.html" target="blank"></a>Ejercicio3</p>
-	<p><a href="ejercicio4.html" target="blank"></a>Ejercicio4</p>
-	<p><a href="ejercicio5.html" target="blank"></a>Ejercicio5</p>
-	<p><a href="ejercicio6.html" target="blank"></a>Ejercicio6</p>
-	<p><a href="ejercicio7.html" target="blank"></a>Ejercicio7</p>
+	<p><a href="ejercicio1.html" >Ejercicio1</a></p>
+	<p><a href="ejercicio2.html" >Ejercicio2</a></p>
+	<p><a href="ejercicios3.html">Ejercicio3</a></p>
+	<p><a href="ejercicio4.html" >Ejercicio4</a></p>
+	<p><a href="ejercicio5.html" >Ejercicio5</a></p>
+	<p><a href="ejercicio6.html" >Ejercicio6</a></p>
+	<p><a href="ejercicio7.html" >Ejercicio7</a></p>
 </body>
 </html>
