--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Ejercicio2</title>
+	<a href="index.html">Inicio</a>
 </head>
 <body>
 	<h1>Lista</h1>
