--- a/ejercicio4.html
+++ b/ejercicio4.html
@@ -5,6 +5,7 @@
 	<etiqueta id="nombre_marcador"></etiqueta>
 	<meta charset="UTF-8">
 	<title>Enlaces</title>
+	<a href="index.html">Inicio</a>
 </head>
 <body>
 	<h1>Ejemplo con marcadores locales</h1>
