--- a/ejercicio5.html
+++ b/ejercicio5.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>imágenes</title>
+	<a href="index.html">Inicio</a>
 </head>
 <body>
 	<h1>IMAGENES</body></h1>
