--- a/ejercicio7.html
+++ b/ejercicio7.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Formularios|María Romero Fontanilla</title>
+    <a href="index.html">Inicio</a>
 </head>
 <body>
 <form action="https://lm.ciclo.iesnervion.es/" method="post">
