--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Elementos de formato de párrafo</title>
+	<a href="index.html">Inicio</a>
 </head>
 <body>
 	<h1>Este es un encabezado de nivel 1.</h1>
