--- a/ejercicio6.html
+++ b/ejercicio6.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Audio y Vídeo | María Romero Fontanilla</title>
+	<a href="index.html">Inicio</a>
 </head>
 <body>
 	<img src="C:\Users\mromero\Documents\GitHub\mariaromerofontanilla.github.io\img\musica-Se-me-ocurre.jpg" width="500" style="float:right;" >
