Ejercicios HTML realizados

--- a/ejercicio5.html
+++ b/ejercicio5.html
@@ -24,13 +24,13 @@
 	<hr>
 	<table>
 		<tr>
-			<th><img src="C:\Users\mromero\Documents\GitHub\mariaromerofontanilla.github.io\img\finalfantasy1.jpg" widht="200" height="100"></th>
-			<th rowspan=3><img src="C:\Users\mromero\Documents\GitHub\mariaromerofontanilla.github.io\img\finalfantasy2.jpg" widht="500" height="250"><figcaption>Final Fantasy</figcaption></th>
-			<th><img src="C:\Users\mromero\Documents\GitHub\mariaromerofontanilla.github.io\img\finalfantasy3.jpg" widht="200" height="100"></th>
+			<th><img src="img\finalfantasy1.jpg" widht="200" height="100"></th>
+			<th rowspan=3><img src="img\finalfantasy2.jpg" widht="500" height="250"><figcaption>Final Fantasy</figcaption></th>
+			<th><img src="img\finalfantasy3.jpg" widht="200" height="100"></th>
 		</tr>
 		<tr>
-			<th><img src="C:\Users\mromero\Documents\GitHub\mariaromerofontanilla.github.io\img\finalfantasy4.jpg" widht="200" height="100"></th>
-			<th><img src="C:\Users\mromero\Documents\GitHub\mariaromerofontanilla.github.io\img\finalfantasy5.jpg" widht="200" height="100"></th>
+			<th><img src="img\finalfantasy4.jpg" widht="200" height="100"></th>
+			<th><img src="img\finalfantasy5.jpg" widht="200" height="100"></th>
 
 		</tr>
 		
