--- a/ejercicio6.html
+++ b/ejercicio6.html
@@ -7,10 +7,10 @@
 	<a href="index.html">Inicio</a>
 </head>
 <body>
-	<img src="C:\Users\mromero\Documents\GitHub\mariaromerofontanilla.github.io\img\musica-Se-me-ocurre.jpg" width="500" style="float:right;" >
+	<img src="img\musica-Se-me-ocurre.jpg" width="500" style="float:right;" >
 	<fieldset style="width:35%">
 	<legend><h1>Audio y Vídeo</h1></legend>
-	<audio autoplay controls src="C:\Users\mromero\Documents\GitHub\mariaromerofontanilla.github.io\audio\musica-Tortuga-de-Mar-Se-me-ocurre.mp3">
+	<audio autoplay controls src="audio\musica-Tortuga-de-Mar-Se-me-ocurre.mp3">
    Puede que haya navegadores que no
 	</audio>
 	<h3 style="color: #A356A3">Se me ocurre de Tortuga de Mar</h3>
