--- a/ejercicio6.html
+++ b/ejercicio6.html
@@ -11,7 +11,7 @@
 	<fieldset style="width:35%">
 	<legend><h1>Audio y Vídeo</h1></legend>
 	<audio autoplay controls src="audio\musica-Tortuga-de-Mar-Se-me-ocurre.mp3">
-   Puede que haya navegadores que no
+   Puede que haya navegadores que no puedas escuchar la música.
 	</audio>
 	<h3 style="color: #A356A3">Se me ocurre de Tortuga de Mar</h3>
 	<p>Hoy mi vida pasa tan deprisa
