--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -4,7 +4,30 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Ejercicio2</title>
-	<a href="index.html">Inicio</a>
+	<a href="index.html"></a>
+	<link rel="stylesheet" type="text/css" href="css.css">
+	<style type="text/css">
+		ol {
+			color: blue;
+			font-size: 2em;
+		}
+		ol li:nth-child(odd){
+			color: lightblue;
+		}
+		ul li:nth-child(odd) {
+			color: white;
+			background-color: darkgreen;
+		}
+		ul li:nth-child(even){
+			background-color: darkgreen;
+		}
+
+		}
+		ul {
+			background-color: darkgreen;
+			color: white;
+		}
+	</style>
 </head>
 <body>
 	<h1>Lista</h1>
