--- a/ejercicio7.html
+++ b/ejercicio7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Formularios|María Romero Fontanilla</title>
-    <a href="index.html">Inicio</a>
+    <a href="">Inicio</a>
 </head>
 <body>
 <form action="https://lm.ciclo.iesnervion.es/" method="post">
@@ -53,6 +53,7 @@
     </h3>
     </fieldset>
     <button type="submit">Enviar</button>
+    <input name="boton" type="submit" value="cargar" id="enviar">
 </form>
 </body>
 </html>
