--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -4,13 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Elementos de formato de párrafo</title>
-	<a href="index.html">Inicio</a>
+	<a href="index.html"></a>
+
 </head>
-<body>
-	<h1>Este es un encabezado de nivel 1.</h1>
+<body style="background-color:PapayaWhip; margin: 20px;" >
+	<h1 style="color:#A356A3; background-color:Pink;" >Este es un encabezado de nivel 1.</h1>
 	<br/>
-	<h6>Pero éste es de nivel 6</h6>
+	<h6 style="text-align:right;">Pero éste es de nivel 6</h6>
 	<br/>
-	<p>Ahora voy a definir un párrafo. Dentro del que podremos texto en <b>negrita</b>, <i>cursiva</i>, <u>subrayada</u> e incluso <b><u>negrita y subrayada</u></b> simultaneamente y <b><u><i>negrita, curseva y subrayada.</i></u></b> mediante el anidamiento de etiquetas. Además vamos a mostrar el uso de <sub>subindices</sub> y de <sup>supraindices</sup>, asi como <strong>texto resltado, que no es negrita</strong>
+	<p style="color: blue;">Ahora voy a definir un párrafo. Dentro del que podremos texto en <b style="color: darkred;">negrita</b>, <i style="color:red">cursiva</i>, <u style="color: crimson;">subrayada</u> e incluso <b style="color: darkred;"><u>negrita y subrayada</u></b> simultaneamente y <b style="color: darkred;"><u style="color: crimson;"><i style="color:red">negrita, curseva y subrayada.</i></u></b> mediante el anidamiento de etiquetas. Además vamos a mostrar el uso de <sub>subindices</sub> y de <sup>supraindices</sup>, asi como <strong>texto resltado, que no es negrita</strong>
 </body>
 </html>
