--- a/ejercicio4.html
+++ b/ejercicio4.html
@@ -4,8 +4,24 @@
 <head>
 	<etiqueta id="nombre_marcador"></etiqueta>
 	<meta charset="UTF-8">
+	<meta name="autor" content="Maria Romero">
 	<title>Enlaces</title>
-	<a href="index.html">Inicio</a>
+	<a href="index.html"></a>
+	<link rel="stylesheet" type="text/css" href="estilo.css">
+	<style type="text/css">
+		body {
+			background-color: #010101;
+		}
+		h1 {
+			font-family: "times new roman";
+		 }
+		p {
+			font-family: "courier Sans";
+
+		}
+
+	</style>
+		
 </head>
 <body>
 	<h1>Ejemplo con marcadores locales</h1>
@@ -18,26 +34,26 @@
 		<li><a href="#verde">Verde</a></li>
 	</ol>
 	<h1>Color Negro</h1>
-	<p>Lorem fistrum consectetur incididunt hasta luego Lucas amatomaa cillum. Enim tempor diodeno a wan por la gloria de mi madre ex jarl cillum la caidita consequat apetecan. Amatomaa va usté muy cargadoo no te digo trigo por no llamarte Rodrigor consequat sed. Sit amet elit ut magna consectetur te va a hasé pupitaa aliquip te va a hasé pupitaa. Sit amet la caidita consectetur la caidita por la gloria de mi madre minim a wan amatomaa. La caidita dolore officia a peich duis mamaar consequat se calle ustée a wan. Eiusmod tiene musho peligro dolore sed enim pecador. Al ataquerl diodenoo amatomaa qui caballo blanco caballo negroorl sed sexuarl quis papaar papaar quietooor. Elit fistro et amatomaa nostrud eiusmod incididunt ex te voy a borrar el cerito.</p>
+	<p style="color: black;">Lorem fistrum consectetur incididunt hasta luego Lucas amatomaa cillum. Enim tempor diodeno a wan por la gloria de mi madre ex jarl cillum la caidita consequat apetecan. Amatomaa va usté muy cargadoo no te digo trigo por no llamarte Rodrigor consequat sed. Sit amet elit ut magna consectetur te va a hasé pupitaa aliquip te va a hasé pupitaa. Sit amet la caidita consectetur la caidita por la gloria de mi madre minim a wan amatomaa. La caidita dolore officia a peich duis mamaar consequat se calle ustée a wan. Eiusmod tiene musho peligro dolore sed enim pecador. Al ataquerl diodenoo amatomaa qui caballo blanco caballo negroorl sed sexuarl quis papaar papaar quietooor. Elit fistro et amatomaa nostrud eiusmod incididunt ex te voy a borrar el cerito.</p>
 	<a href="#nombre_marcador">Subir</a>
 	<etiqueta id="rojo"></etiqueta>
 	<h1>Color Rojo</h1>
-	<p>Lorem fistrum consectetur incididunt hasta luego Lucas amatomaa cillum. Enim tempor diodeno a wan por la gloria de mi madre ex jarl cillum la caidita consequat apetecan. Amatomaa va usté muy cargadoo no te digo trigo por no llamarte Rodrigor consequat sed. Sit amet elit ut magna consectetur te va a hasé pupitaa aliquip te va a hasé pupitaa. Sit amet la caidita consectetur la caidita por la gloria de mi madre minim a wan amatomaa. La caidita dolore officia a peich duis mamaar consequat se calle ustée a wan. Eiusmod tiene musho peligro dolore sed enim pecador. Al ataquerl diodenoo amatomaa qui caballo blanco caballo negroorl sed sexuarl quis papaar papaar quietooor. Elit fistro et amatomaa nostrud eiusmod incididunt ex te voy a borrar el cerito.</p>
+	<p style="color: red">Lorem fistrum consectetur incididunt hasta luego Lucas amatomaa cillum. Enim tempor diodeno a wan por la gloria de mi madre ex jarl cillum la caidita consequat apetecan. Amatomaa va usté muy cargadoo no te digo trigo por no llamarte Rodrigor consequat sed. Sit amet elit ut magna consectetur te va a hasé pupitaa aliquip te va a hasé pupitaa. Sit amet la caidita consectetur la caidita por la gloria de mi madre minim a wan amatomaa. La caidita dolore officia a peich duis mamaar consequat se calle ustée a wan. Eiusmod tiene musho peligro dolore sed enim pecador. Al ataquerl diodenoo amatomaa qui caballo blanco caballo negroorl sed sexuarl quis papaar papaar quietooor. Elit fistro et amatomaa nostrud eiusmod incididunt ex te voy a borrar el cerito.</p>
 	<a href="#nombre_marcador">Subir</a>
 	<etiqueta id="amarillo"></etiqueta>
 	<h1>Color Amarillo</h1>
-	<p>Lorem fistrum consectetur incididunt hasta luego Lucas amatomaa cillum. Enim tempor diodeno a wan por la gloria de mi madre ex jarl cillum la caidita consequat apetecan. Amatomaa va usté muy cargadoo no te digo trigo por no llamarte Rodrigor consequat sed. Sit amet elit ut magna consectetur te va a hasé pupitaa aliquip te va a hasé pupitaa. Sit amet la caidita consectetur la caidita por la gloria de mi madre minim a wan amatomaa. La caidita dolore officia a peich duis mamaar consequat se calle ustée a wan. Eiusmod tiene musho peligro dolore sed enim pecador. Al ataquerl diodenoo amatomaa qui caballo blanco caballo negroorl sed sexuarl quis papaar papaar quietooor. Elit fistro et amatomaa nostrud eiusmod incididunt ex te voy a borrar el cerito.</p>
+	<p style="color: yellow;">Lorem fistrum consectetur incididunt hasta luego Lucas amatomaa cillum. Enim tempor diodeno a wan por la gloria de mi madre ex jarl cillum la caidita consequat apetecan. Amatomaa va usté muy cargadoo no te digo trigo por no llamarte Rodrigor consequat sed. Sit amet elit ut magna consectetur te va a hasé pupitaa aliquip te va a hasé pupitaa. Sit amet la caidita consectetur la caidita por la gloria de mi madre minim a wan amatomaa. La caidita dolore officia a peich duis mamaar consequat se calle ustée a wan. Eiusmod tiene musho peligro dolore sed enim pecador. Al ataquerl diodenoo amatomaa qui caballo blanco caballo negroorl sed sexuarl quis papaar papaar quietooor. Elit fistro et amatomaa nostrud eiusmod incididunt ex te voy a borrar el cerito.</p>
 	<a href="#nombre_marcador">Subir</a>
 	<etiqueta id="azul"></etiqueta>
 	<h1>Color Azul</h1>
-	<p>Lorem fistrum consectetur incididunt hasta luego Lucas amatomaa cillum. Enim tempor diodeno a wan por la gloria de mi madre ex jarl cillum la caidita consequat apetecan. Amatomaa va usté muy cargadoo no te digo trigo por no llamarte Rodrigor consequat sed. Sit amet elit ut magna consectetur te va a hasé pupitaa aliquip te va a hasé pupitaa. Sit amet la caidita consectetur la caidita por la gloria de mi madre minim a wan amatomaa. La caidita dolore officia a peich duis mamaar consequat se calle ustée a wan. Eiusmod tiene musho peligro dolore sed enim pecador. Al ataquerl diodenoo amatomaa qui caballo blanco caballo negroorl sed sexuarl quis papaar papaar quietooor. Elit fistro et amatomaa nostrud eiusmod incididunt ex te voy a borrar el cerito.</p>
+	<p style="color: blue">Lorem fistrum consectetur incididunt hasta luego Lucas amatomaa cillum. Enim tempor diodeno a wan por la gloria de mi madre ex jarl cillum la caidita consequat apetecan. Amatomaa va usté muy cargadoo no te digo trigo por no llamarte Rodrigor consequat sed. Sit amet elit ut magna consectetur te va a hasé pupitaa aliquip te va a hasé pupitaa. Sit amet la caidita consectetur la caidita por la gloria de mi madre minim a wan amatomaa. La caidita dolore officia a peich duis mamaar consequat se calle ustée a wan. Eiusmod tiene musho peligro dolore sed enim pecador. Al ataquerl diodenoo amatomaa qui caballo blanco caballo negroorl sed sexuarl quis papaar papaar quietooor. Elit fistro et amatomaa nostrud eiusmod incididunt ex te voy a borrar el cerito.</p>
 	<a href="#nombre_marcador">Subir</a>
 	<etiqueta id="verde"></etiqueta>
 	<h1>Color Verde</h1>
-	<p>Lorem fistrum consectetur incididunt hasta luego Lucas amatomaa cillum. Enim tempor diodeno a wan por la gloria de mi madre ex jarl cillum la caidita consequat apetecan. Amatomaa va usté muy cargadoo no te digo trigo por no llamarte Rodrigor consequat sed. Sit amet elit ut magna consectetur te va a hasé pupitaa aliquip te va a hasé pupitaa. Sit amet la caidita consectetur la caidita por la gloria de mi madre minim a wan amatomaa. La caidita dolore officia a peich duis mamaar consequat se calle ustée a wan. Eiusmod tiene musho peligro dolore sed enim pecador. Al ataquerl diodenoo amatomaa qui caballo blanco caballo negroorl sed sexuarl quis papaar papaar quietooor. Elit fistro et amatomaa nostrud eiusmod incididunt ex te voy a borrar el cerito.</p>
+	<p style="color: green;">Lorem fistrum consectetur incididunt hasta luego Lucas amatomaa cillum. Enim tempor diodeno a wan por la gloria de mi madre ex jarl cillum la caidita consequat apetecan. Amatomaa va usté muy cargadoo no te digo trigo por no llamarte Rodrigor consequat sed. Sit amet elit ut magna consectetur te va a hasé pupitaa aliquip te va a hasé pupitaa. Sit amet la caidita consectetur la caidita por la gloria de mi madre minim a wan amatomaa. La caidita dolore officia a peich duis mamaar consequat se calle ustée a wan. Eiusmod tiene musho peligro dolore sed enim pecador. Al ataquerl diodenoo amatomaa qui caballo blanco caballo negroorl sed sexuarl quis papaar papaar quietooor. Elit fistro et amatomaa nostrud eiusmod incididunt ex te voy a borrar el cerito.</p>
 	<a href="#nombre_marcador">Subir</a>
 	<h1>Color Blanco</h1>
-	<p>Lorem fistrum consectetur incididunt hasta luego Lucas amatomaa cillum. Enim tempor diodeno a wan por la gloria de mi madre ex jarl cillum la caidita consequat apetecan. Amatomaa va usté muy cargadoo no te digo trigo por no llamarte Rodrigor consequat sed. Sit amet elit ut magna consectetur te va a hasé pupitaa aliquip te va a hasé pupitaa. Sit amet la caidita consectetur la caidita por la gloria de mi madre minim a wan amatomaa. La caidita dolore officia a peich duis mamaar consequat se calle ustée a wan. Eiusmod tiene musho peligro dolore sed enim pecador. Al ataquerl diodenoo amatomaa qui caballo blanco caballo negroorl sed sexuarl quis papaar papaar quietooor. Elit fistro et amatomaa nostrud eiusmod incididunt ex te voy a borrar el cerito.</p>
+	<p style="color: white;">Lorem fistrum consectetur incididunt hasta luego Lucas amatomaa cillum. Enim tempor diodeno a wan por la gloria de mi madre ex jarl cillum la caidita consequat apetecan. Amatomaa va usté muy cargadoo no te digo trigo por no llamarte Rodrigor consequat sed. Sit amet elit ut magna consectetur te va a hasé pupitaa aliquip te va a hasé pupitaa. Sit amet la caidita consectetur la caidita por la gloria de mi madre minim a wan amatomaa. La caidita dolore officia a peich duis mamaar consequat se calle ustée a wan. Eiusmod tiene musho peligro dolore sed enim pecador. Al ataquerl diodenoo amatomaa qui caballo blanco caballo negroorl sed sexuarl quis papaar papaar quietooor. Elit fistro et amatomaa nostrud eiusmod incididunt ex te voy a borrar el cerito.</p>
 	<a href="#nombre_marcador">Subir</a>
 
 </body>
